@@ -29,10 +29,11 @@ coverage_cutoff = 70
 #           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
 #          12-Jul-2019 jdw Add placeholders for up to four test paths
 #          13-Jul-2019 jdw Add coverage exclusion
+#          21-Nov-2019 jdw py27->py38 update black version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py37}, lint_pylint-{py37}, format_black-{py37}, py{37,27}, test_coverage-{py37}
+envlist = format_pep8-{py38}, lint_pylint-{py38}, format_black-{py38}, py{38,27}, test_coverage-{py38}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -51,8 +52,7 @@ whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =
-    py27: python2.7
+basepython =  py27: python2.7
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -68,14 +68,13 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
-[testenv:py37]
+[testenv:py38]
 description = 'Run unit tests (unittest runner) using {envpython}'
 whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =
-    py37: python3.7
+basepython = py38: python3.8
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -92,13 +91,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py37]
+[testenv:format_pep8-py38]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython = py38: python3.8
 deps =
     echo
     flake8
@@ -111,13 +110,13 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py37]
+[testenv:lint_pylint-py38]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython3.8 = py38: python3.8
 
 deps =
     echo
@@ -129,16 +128,16 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py37]
+[testenv:format_black-py38]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython3.8 = py38: python3.8
 deps =
     echo
-    black>=19.3b0
+    black>=19.10b0
     -r requirements.txt
     #    isort>=4.3.20
 commands =
@@ -148,13 +147,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py37]
+[testenv:test_coverage-py38]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython = py38: python3.8
 recreate = true
 alwayscopy=true
 usedevelop=true
