@@ -5,4 +5,5 @@
 23-Mar-2019  - V0.12 Handle nonhashable data lists and add pool mode
 22-Jun-2019  - V0.13 Update development workflows
 17-Oct-2019  - V0.14 Update documentation and fix some linting issues
+23-Nov-2019  - V0.15 Move pipeline to py38 - disable tests in py38 for MultiProcLogging()
 
